--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   fl_chart: ^0.69.0
+  grpc: ^4.0.1
+  protobuf: ^3.1.0
 
 dev_dependencies:
+  protobuf: ^3.1.0
+  build_runner: ^2.4.13
   flutter_test:
     sdk: flutter
 
