--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,8 @@ dependencies:
   fl_chart: ^0.69.0
   grpc: ^4.0.1
   protobuf: ^3.1.0
-
+  file_picker: ^8.1.3
 dev_dependencies:
-  protobuf: ^3.1.0
   build_runner: ^2.4.13
   flutter_test:
     sdk: flutter
